--- a/configure.ac
+++ b/configure.ac
@@ -66,7 +66,7 @@ AC_SUBST(LIBCURL_CFLAGS)
 AC_SUBST(LIBCURL_LDFLAGS)
 AC_SUBST(LIBCURL_LIBS)
 
-PKG_CHECK_MODULES(MICROXML, [microxml])
+PKG_CHECK_MODULES(MICROXML, [mxml])
 AC_SUBST(MICROXML_CFLAGS)
 AC_SUBST(MICROXML_LDFLAGS)
 AC_SUBST(MICROXML_LIBS)
